#
#
AC_INIT([CDRipper],[0.0],[PROJ],[CDRipper])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CFLAGS=-Wall
AC_SUBST(CFLAGS)
glib-2.0

GLIB_MODULES="glib-2.0 >= 2.30.0"
PKG_CHECK_MODULES(GLIB, $GLIB_MODULES)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

CDDB_MODULES="libcddb >= 0.9.5"
PKG_CHECK_MODULES(CDDB, $CDDB_MODULES)
AC_SUBST(CDDB_CFLAGS)
AC_SUBST(CDDB_LIBS)

GTK_MODULES="gtk+-2.0 >= 2.24.0"
PKG_CHECK_MODULES(GTK, $GTK_MODULES)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

GTHREAD_MODULES="gthread-2.0 >= 2.24.0"
PKG_CHECK_MODULES(GTHREAD, $GTHREAD_MODULES)
AC_SUBST(GTHREAD_CFLAGS)
AC_SUBST(GTHREAD_LIBS)

GDK_MODULES="gdk-2.0 >= 2.24.13"
PKG_CHECK_MODULES(GDK, $GDK_MODULES)
AC_SUBST(GDK_CFLAGS)
AC_SUBST(GDK_LIBS)

AC_OUTPUT(Makefile CDRipper/app/Makefile)

